--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -1214,6 +1214,10 @@ Keine weiteren Angaben.
 \end{figure}
 
 \section{Entwicklungsumgebung}
+Da das Projekt ein Gradle Projekt ist, wird grundsätzlich nur eine IDE benötigt, die Gradle Projekte unterstützt. In der Entwicklungsphase wurde IntelliJ IDEA 2016.2.4 genutzt.
+Weiterhin wurde das Java SDK in der Version 1.8 genutzt. Die Datenbank ist eine embedded Mongo DB. 
+Zusätzliche Abhängigkeiten werden über Gradle Dependencies aufgelöst.
+
 
 \section{Glossar}
 
