--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -11,6 +11,10 @@
 % this is needed for forms and links within the text
 \usepackage{hyperref}
 
+% glossar, see http://en.wikibooks.org/wiki/LaTeX/Glossary
+% has to be loaded AFTER hyperref so that entries are clickable
+\usepackage[nonumberlist]{glossaries} 
+
 % The following is needed in order to make the code compatible
 % with both latex/dvips and pdflatex.
 \ifx\pdftexversion\undefined
@@ -20,9 +24,12 @@
 \DeclareGraphicsRule{*}{mps}{*}{}
 \fi
 
+\makeglossary
+
 \newcommand{\authorName}{Dustin Spallek, Rene Kretschmer, Christof Rode, Jana Wengenroth, Malte Scheller, Daniel Schruhl}
 \newcommand{\projektName}{Anbieter Informations Management}
 \newcommand{\tags}{\authorName, Pflichtenheft}
+\newcommand{\glossarName}{Glossar}
 \title{\projektName~(Pflichtenheft)}
 \author{Dustin Spallek, Rene Kretschmer, Christof Rode, Jana Wengenroth, \\Malte Scheller, Daniel Schruhl}
 \date{\today}
@@ -1218,7 +1225,6 @@ Da das Projekt ein Gradle Projekt ist, wird grundsätzlich nur eine IDE benötig
 Weiterhin wurde das Java SDK in der Version 1.8 genutzt. Die Datenbank ist eine embedded Mongo DB. 
 Zusätzliche Abhängigkeiten werden über Gradle Dependencies aufgelöst.
 
-
-\section{Glossar}
+\input{Glossar}
 
 \end{document}
