--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -1225,6 +1225,8 @@ Da das Projekt ein Gradle Projekt ist, wird grundsätzlich nur eine IDE benötig
 Weiterhin wurde das Java SDK in der Version 1.8 genutzt. Die Datenbank ist eine embedded Mongo DB. 
 Zusätzliche Abhängigkeiten werden über Gradle Dependencies aufgelöst.
 
+\clearpage
+
 \input{Glossar}
 
 \end{document}
