--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -75,6 +75,7 @@ Es soll ein Microservice erstellt werden, um die vorhandenen Anbieter und Produk
   \addrow{/MK70/}{Dateien können in einer Dateiverwaltung ersetzt werden und die
    Verlinkungen in den Texten bleiben für die Dateien erhalten}
   \addrow{/MK80/}{Alle im System gespeicherten Daten müssen über eine Schnittstelle erreichbar sein}
+  \addrow{/MK90/}{Es muss möglich sein über eine externe Konfigurations-Datei gewisse Beschränkungen vorzunehmen (siehe Produktdaten)}
 \end{usecase}
 
 \subsection{Wunschkriterien}
@@ -1144,22 +1145,22 @@ Keine weiteren Angaben.
 \section{Produktdaten}
 \begin{usecase}
   \addheading{Nummer}{Beschreibung} 
-  \addrow{/PD10/}{Produkte haben einen Namen}
-  \addrow{/PD20/}{Produkte haben eine Kurzbeschreibung}
+  \addrow{/PD10/}{Produkte haben einen Namen (Länge konfigurierbar)}
+  \addrow{/PD20/}{Produkte haben eine Kurzbeschreibung (Länge konfigurierbar)}
   \addrow{/PD30/}{Produkte haben eine Detailbeschreibung}
-  \addrow{/PD40/}{Produkte haben eine Feature Tabelle}
+  \addrow{/PD40/}{Produkte haben eine Feature Tabelle (Länge konfigurierbar)}
   \addrow{/PD50/}{Ein Produkt hat ein Hauptbild}
-  \addrow{/PD60/}{Ein Produkt hat Medien in einer Galerie} 
+  \addrow{/PD60/}{Ein Produkt hat Medien in einer Galerie (Dateitypen konfigurierbar)}
   \addrow{/PD70/}{Anbieter haben mehrere Produkte}
-  \addrow{/PD80/}{Anbieter haben einen Namen}
-  \addrow{/PD90/}{Anbieter haben eine Kurzbeschreibung}
+  \addrow{/PD80/}{Anbieter haben einen Namen (Länge konfigurierbar)}
+  \addrow{/PD90/}{Anbieter haben eine Kurzbeschreibung (Länge konfigurierbar)}
   \addrow{/PD100/}{Anbieter haben eine Detailbeschreibung}
-  \addrow{/PD110/}{Anbieter haben eine Feature Tabelle}
+  \addrow{/PD110/}{Anbieter haben eine Feature Tabelle (Länge konfigurierbar)}
   \addrow{/PD120/}{Ein Anbieter hat ein Hauptbild}
-  \addrow{/PD130/}{Ein Anbieter hat Medien in einer Galerie} 
+  \addrow{/PD130/}{Ein Anbieter hat Medien in einer Galerie (Dateitypen konfigurierbar)}
   \addrow{/PD140/}{Ein Feature in der Feature Tabelle hat einen Titel und eine Beschreibung}
-  \addrow{/PD150/}{Eine Feature Tabelle hat mehrere Features}
-  \addrow{/PD160/}{Medien in der Galerie können PDFs oder Bilder sein}
+  \addrow{/PD150/}{Eine Feature Tabelle hat mehrere Features (Länge konfigurierbar)}
+  \addrow{/PD160/}{Medien in der Galerie können PDFs oder Bilder sein (Dateitypen konfigurierbar)}
   \addrow{/PD170/}{Ein User hat einen Namen und ein Passwort}
 \end{usecase}
 
@@ -1214,8 +1215,9 @@ Keine weiteren Angaben.
 \end{figure}
 
 \section{Entwicklungsumgebung}
-Da das Projekt ein Gradle Projekt ist, wird grundsätzlich nur eine IDE benötigt, die Gradle Projekte unterstützt. In der Entwicklungsphase wurde IntelliJ IDEA 2016.2.4 genutzt.
-Weiterhin wurde das Java SDK in der Version 1.8 genutzt. Die Datenbank ist eine embedded Mongo DB. 
+Da das Projekt ein Gradle Projekt ist, wird grundsätzlich nur eine IDE benötigt, die Gradle Projekte unterstützt.
+In der Entwicklungsphase wurde IntelliJ IDEA 2016.2.4 genutzt. Weiterhin wurde das Java SDK in der Version 1.8 genutzt.
+Die Datenbank ist eine embedded Mongo DB.
 Zusätzliche Abhängigkeiten werden über Gradle Dependencies aufgelöst.
 
 
