--- a/docs/Glossar.tex
+++ b/docs/Glossar.tex
@@ -1,23 +1,104 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Begriffslexikon zur Beschreibung des Produkts						 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newglossaryentry{sortierschluessel}
+\newglossaryentry{anbieter}
 {
-  name=Sortierschlüssel,
-  description={ein Schlüssel, anhand dessen diese Einträge sortiert werden}
+  name=Anbieter,
+  description={Telefon-Anbieter-Firma, die das System nutzt. Der Anbieter trägt die Daten und Informationen seiner Firma und seiner Produkte ein. \\ Synonym: Kunde}
 }
-\newglossaryentry{bananarama}
-{
-  name=Bananarama,
-  description={ein zweiter Eintrag}
-}
-\newglossaryentry{lorem}
-{
-  name=Lorem Ipsum,
-  description={ein Blindtext}
-}
-\newacronym{abc}{Blub}{Bananarama}
 
+\newglossaryentry{bildergalerie}
+{
+  name=Bildergalerie,
+  description={Der User kann Bilder und Dateien der Formate .jpg, .gif, .png oder .pdf in die Bildergalerie für ein Produkt oder den Anbieter hochladen. Außerdem kann er die Dateien in der Liste nach oben oder unten schieben, um die Reihenfolge zu verändern. Die Bildergalerie wird auf der Seite unten mittig als Slidebar angezeigt. Die maximale Anzahl wird über die Speicherkapazität geregelt. \\ Querverweis: Produkt, Anbieter}
+}
+
+\newglossaryentry{endverbraucher}
+{
+  name=Endverbraucher,
+  description={Bedeutung: Kunde des Kunden, der das System nutzt, um sich über die verschiedenen Anbieter und deren Produkte zu informieren. \\ Abgrenzung: User, Anbieter \\ Querverweis: Anbieter, Produkt}
+}
+
+\newglossaryentry{feature-tabelle}
+{
+  name=Feature-Tabelle,
+  description={Wird von dem User erstellt. Der User kann zu jedem Produkt und Anbieter eine Tabelle mit Produkteigenschaften und einer kurzen Beschreibung anlegen. Mit einem "Plus"-Button kann er neue Zeilen hinzufügen. Die Feature-Tabelle wird auf der Seite unten links angezeigt. \\ Querverweis: Produkt, Anbieter}
+}
+
+\newglossaryentry{hauptbild}
+{
+  name=Hauptbild,
+  description={Das Hauptbild wird vom Anbieter aus der Bildergalerie gewählt. Es wird größer angezeigt als die übrigen Bilder der Seite. Es kann die Fromate .jpg, .gif oder .png haben. \\ Querverweis: Bildergalerie, Anbieter}
+}
+
+\newglossaryentry{kurzbeschreibung}
+{
+  name=Kurzbeschreibung,
+  description={Kurzer Text der das Produkt oder den Anbieter beschreibt. Die Länge ist voreingestellt. Sie wird von dem User eingetragen und nach dem Speicher in einem Textfeld auf der Seite des Anbieters oder des Produktes angezeigt. \\ Querverweis: User, Anbieter, Produkt}
+}
+
+\newglossaryentry{langer-text}
+{
+  name=Langer Text,
+  description={Ausführliche Beschreibung des Produktes oder des Anbieters. Er wird vom User eingetragen und nach dem Speicher in einem Textfeld auf der Seite des Anbieters oder des Produktes angezeigt. \\ Synonym: Detailbeschreibung \\ Querverweis: Produkt, Anbieter}
+}
+
+\newglossaryentry{login}
+{
+  name=Login,
+  description={Eingabe des Benutzernamens und des Passwortes durch den User, um im Anschluss die Daten der Produkte und des Anbieters bearbeiten zu können. \\ Querverweis: User, Produkt, Anbieter}
+}
+
+\newglossaryentry{logout}
+{
+  name=Logout,
+  description={Abmelden des Users. Falls der User seine Änderungen vor dem Logout nicht gespeichert hat, wird er gefragt, ob er speichern oder zurücksetzen will. \\ Querverweis: User, Zurücksetzten}
+}
+
+\newglossaryentry{name}
+{
+  name=Name,
+  description={Name des Anbieters oder des Produktes, der als nicht ändererbarer Text oben auf der Seite des Anbieters angezeigt wird. \\ Querverweis: Anbieter, Produkt}
+}
+
+\newglossaryentry{produkt}
+{
+  name=Produkt,
+  description={Ein Produkt ist immer einem Anbieter zugeordnet. Es werden die Informationen über das Produkt von dem Anbieter auf der Seite des Produktes eingetragen. \\ Querverweis: Anbieter}
+}
+
+\newglossaryentry{produkt-menu}
+{
+  name=Produktmenü,
+  description={Auf der linken Seite der User-Ansicht beifindet sich eine Auflistung der Produkte des Anbieters. Durch Anklicken, kann ein Produkt oder auch der Anbiter selbst ausgewählt werden und die Informationen könnnen bearbeitet werden. \\ Querverweis: Produkt, Anbieter}
+}
+
+\newglossaryentry{seite}
+{
+  name=Seite,
+  description={Ansicht eines Produktes oder Anbieters, die der Endverbraucher hat. \\ Querverweis: Endverbraucher, Produkt, Anbieter}
+}
+
+\newglossaryentry{user}
+{
+  name=User,
+  description={Angestellter des Anbieters, der die Daten und Informationen einträgt. Dieser Angestellte muss über administrative Rechte verfügen, um sich einzuloggen und die Seite zu bearbeiten. \\ Abgrenzung: User, Endverbraucher \\ Querverweis: Anbieter \\ Synonym: Benutzer}
+}
+
+\newglossaryentry{user-ansicht}
+{
+  name=User-Ansicht,
+  description={Ansicht der Bearbeitungsmaske, die der User nutzt, um die Daten des Produktes oder des Anbieters einzutragen. \\ Querverweis: User, Produkt, Anbieter}
+}
+
+\newglossaryentry{zurucksetzen}
+{
+  name=Zurücksetzen,
+  description={Wenn der User die Daten eingetragen hat und noch nicht gespeichert hat, können seine Änderungen über den Button "Zurücksetzten", wieder gelöscht werden. Das heißt, es wird der Stand des letzten Speicherns wiederhergestellt. Wenn der User die Seite verlassen will, ohne das er zuvor gespeichert hat, wird er gefragt, ob er speichern oder zurücksetzten möchte. \\ Querverweis: User}
+}
+
+%detailbeschreibung langtext synonym
+ 
 % Setze den richtigen Namen für das Glossar
 \renewcommand*{\glossaryname}{\section{\glossarName}}
 
