--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -114,6 +114,45 @@ Unsere Zielgruppe sind alle Mitarbeiter der Anbieter, die einen Zugang zum Syste
 Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter und Produktdaten.
 
 \section{Produktumgebung}
+Für den produktiven Einsatz der Software wird der Applicationserver Tomcat und eine Mongo Datenbank benötigt.
+Die Anwendung selbst wird als .war Datei bereitgestellt und muss auf dem Tomcat Server deployed werden. Zusätzlich müssen alle verwendeteten Netzwerk-Ports freigeschaltet sein.
+
+\begin{itemize}
+
+\item
+  IDE: Jetbrains Intellij IDEA
+\item
+  Versionsverwaltung: git
+\item
+  Backend:
+\item
+  Buildtool: Gradle
+\item
+  Sprachen: Java
+\item
+  Frameworks: Spring Boot, Spring Data JPA
+\item
+  Testing: JUnit, REST Assured
+\item
+  Frontend:
+\item
+  Sprachen: Typescript, HTML, CSS
+\item
+  Frameworks: Angular 2
+\item
+  Package Manager: npm
+\item
+  Module Loader: SystemJs
+\item
+  Testing: Jasmine
+\item
+  Persistenz: MongoDB
+\item
+  Schnittstelle:
+\item
+  REST
+\end{itemize}
+
 \subsection{Software}
 \subsection{Hardware}
 \subsection{Orgware}
