--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -83,6 +83,7 @@ Es soll ein Microservice erstellt werden, um die vorhandenen Anbieter und Produk
    Verlinkungen in den Texten bleiben für die Dateien erhalten}
   \addrow{/MK80/}{Alle im System gespeicherten Daten müssen über eine Schnittstelle erreichbar sein}
   \addrow{/MK90/}{Es muss möglich sein über eine externe Konfigurations-Datei gewisse Beschränkungen vorzunehmen (siehe Produktdaten)}
+  \addrow{/MK100/}{Es soll für die Kurz- und Detailbeschreibung ein Rich-Text Editor zur Verfügung stehen}
 \end{usecase}
 
 \subsection{Wunschkriterien}
