--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -1259,6 +1259,17 @@ Alle Use-Cases werden mit JUnit-Tests kontrolliert. Daraus ergeben sich folgende
 
 \section{Systemmodelle}
 
+\subsection{Anwendungsfalldiagramm}
+
+\subsection{Sequenzdiagramm}
+
+\begin{figure}[!htb]
+  \centering
+     \includegraphics[width=.7\textwidth]{Sequenzdiagramm.png}
+  \caption{Sequenzdiagramm: Datei Upload}
+  \label{fig:file-upload}
+\end{figure}
+
 \subsection{Datenmodell}
 
 \begin{figure}[!htb]
