adds use case diagram picture and more cleapage

--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -104,6 +104,7 @@ Es soll ein Microservice erstellt werden, um die vorhandenen Anbieter und Produk
   \addrow{/AK50/}{Es können keine neuen Anbieter über das System angelegt werden}
 \end{usecase}
 
+\clearpage
 
 \section{Produkteinsatz}
 Der Microservice soll in die Infrastruktur von Symphony eingegliedert werden, um für Anbieter die Funktion der Anreicherung ihrer Produktdaten zu ermöglichen.
