subsubsections are not shown in toc anymore and glossary only appears once in toc

--- a/docs/Glossar.tex
+++ b/docs/Glossar.tex
@@ -100,7 +100,7 @@
 %detailbeschreibung langtext synonym
  
 % Setze den richtigen Namen für das Glossar
-\renewcommand*{\glossaryname}{\section{\glossarName}}
+%\renewcommand*{\glossaryname}{\section{\glossarName}}
 
 % Drucke das gesamte Glossar
 \glsaddall
