--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -59,6 +59,7 @@
  \pagenumbering{roman}
  \input{Deckblatt}         % Deckblatt.tex laden und einfügen
  \setcounter{page}{2}
+ \setcounter{tocdepth}{2}
  \tableofcontents          % Inhaltsverzeichnis ausgeben
  \clearpage
  \pagenumbering{arabic}
