--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -815,7 +815,7 @@ Der Benutzer fügt einen Eintrag zu der Fakten-Tabelle hinzu.
 
 \clearpage
 
-\subsection{Sortierung der Faktentabelle}\label{benutzer-verschiebt-einen-eintrag-in-der-fakten-tabelle}
+\subsection{Sortierung der Fakten-Tabelle}\label{benutzer-verschiebt-einen-eintrag-in-der-fakten-tabelle}
 Der Benutzer verschiebt einen Eintrag in der Fakten-Tabelle an die gewünschte Position.
 
 \subsubsection{Vorbedingung}\label{vorbedingung-9}
@@ -1264,7 +1264,7 @@ Alle Use-Cases werden mit JUnit-Tests kontrolliert. Daraus ergeben sich folgende
 \subsection{Anwendungsfalldiagramm}
 \begin{figure}[!htb]
   \centering
-     \includegraphics[width=1.0\textwidth]{use-case-diagram.jpeg}
+     \includegraphics[width=1.0\textwidth]{use-case-diagram.jpg}
   \caption{Anwendungsfalldiagramm}
   \label{fig:file-upload}
 \end{figure}
