--- a/docs/Deckblatt.tex
+++ b/docs/Deckblatt.tex
@@ -29,6 +29,7 @@
 \hline
 1.0 & 19.09.2016 & \authorName \\
 2.0 & 10.10.2016 & \authorName \\
+2.1 & 17.10.2016 & \authorName \\
 \hline
 \end{tabularx}
 \end{titlepage}
