--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -1296,6 +1296,13 @@ Alle Use-Cases werden mit JUnit-Tests kontrolliert. Daraus ergeben sich folgende
   \label{fig:file-upload}
 \end{figure}
 
+\begin{figure}[!htb]
+  \centering
+     \includegraphics[width=.7\textwidth]{sequence-fileupload.png}
+  \caption{Sequenzdiagramm: Dateiupload}
+  \label{fig:file-upload}
+\end{figure}
+
 \clearpage
 
 \subsection{Datenmodell}
