--- a/docs/Glossar.tex
+++ b/docs/Glossar.tex
@@ -79,13 +79,13 @@
   description={Ansicht eines Produktes oder Anbieters, die der Endverbraucher hat. \\ Querverweis: Endverbraucher, Produkt, Anbieter}
 }
 
-\newglossaryentry{user}
+\newglossaryentry{loginResponse}
 {
   name=User,
   description={Angestellter des Anbieters, der die Daten und Informationen einträgt. Dieser Angestellte muss über administrative Rechte verfügen, um sich einzuloggen und die Seite zu bearbeiten. \\ Abgrenzung: User, Endverbraucher \\ Querverweis: Anbieter \\ Synonym: Benutzer}
 }
 
-\newglossaryentry{user-ansicht}
+\newglossaryentry{loginResponse-ansicht}
 {
   name=User-Ansicht,
   description={Ansicht der Bearbeitungsmaske, die der User nutzt, um die Daten des Produktes oder des Anbieters einzutragen. \\ Querverweis: User, Produkt, Anbieter}
